--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,16 +1,117 @@
+- pipeline:
+    name: check
+    post-review: true
+    manager: independent
+    trigger:
+      github:
+        - event: pull_request
+          action:
+            - opened
+            - changed
+        - event: pull_request
+          action:
+            - comment
+          comment:
+            - '^recheck.*$'
+    success:
+      github:
+        comment: true
+        status: success
+    failure:
+      github:
+        comment: true
+        status: failure
+    merge-failure:
+      github:
+        comment: true
+        status: failure
+    start:
+      github:
+        comment: true
+        status: pending
+    disabled:
+      github:
+        comment: true
+- pipeline:
+    name: gate
+    description: |
+      Changes that have been approved by core developers are enqueued
+      in order in this pipeline, and if they pass tests, will be
+      merged.
+    manager: dependent
+    precedence: high
+    supercedes: check
+    require:
+      github:
+        review:
+          # Require an approval from user with write access (e.g. core-reviewer)
+          - permission: write
+            type: approved
+        # Require label
+        label: gate
+        open: True
+        current-patchset: True
+    trigger:
+      github:
+        - event: pull_request_review
+          action: submitted
+          state: approved
+        - event: pull_request
+          action: comment
+          comment: (?i)^\s*regate\s*$
+        - event: pull_request_review
+          action: submitted
+          state: approved
+        - event: pull_request_review
+          action: dismissed
+          state: request_changes
+        - event: pull_request
+          action: status
+          status: ".*:success"
+        - event: pull_request
+          action: labeled
+          label: gate
+    start:
+      github:
+        status: 'pending'
+        status-url: "http://localhost:9000/t/quickstart/status"
+        comment: false
+    success:
+      github:
+        status: 'success'
+        merge: true
+        comment: true
+      
+    failure:
+      github:
+        status: 'failure'
+        comment: true
+      
+    window-floor: 20
+    window-increase-factor: 2 
+
 - project:
-    name: madhuripatil2/zuul-test
+    name: ashish1211/zuul-test
     check:
       jobs:
-        - testjob
         - noop
+        - testjob
+        
+    gate:
+      jobs:
+        - Calculator-master
+   
+- job:
+    name: base1
+    parent: null
+    run: base-playbook.yaml
+
+- job:
+    name: Calculator-master
+    run: Calculator.yaml
 
 - job:
     name: testjob
-    parent: base
     run: testjob.yaml
-    nodeset:
-      nodes:
-        - name: builder
-          label: ubuntu-xenial
+
     
