--- a/testjob.yaml
+++ b/testjob.yaml
@@ -1,5 +1,6 @@
 - hosts: all
   tasks:
-    - debug:
-        msg: Debug message.
+    - name: This is a test task
+      debug:
+        msg: You should see me in the logs.
     
