--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -125,5 +125,28 @@
       github:
         comment: true
 
+- project:
+    name: madhuripatil2/zuul-test
+    check:
+      jobs:
+        - noop
+        - testjob
+        
+    gate:
+      jobs:
+        - Calculator-master
+   
+- job:
+    name: base1
+    parent: null
+    run: base-playbook.yaml
+
+- job:
+    name: Calculator-master
+    run: Calculator.yaml
+
+- job:
+    name: testjob
+    run: testjob.yaml
 
     
