--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -17,7 +17,7 @@
     start:
       github:
         status: 'pending'
-        status-url: "https://zuul.zuul-ci.org/zuul/status.html"
+        status-url: "https://github.com/zuulkpit/hello-zuul" 
         comment: false
     success:
       github:
@@ -71,7 +71,7 @@
     start:
       github:
         status: 'pending'
-        status-url: "https://zuul.zuul-ci.org/zuul/status.html"
+        status-url: "https://github.com/zuulkpit/hello-zuul" 
         comment: false
     success:
       github:
@@ -116,7 +116,3 @@
       sqlreporter:
     failure:
       sqlreporter:
-
-
-
-    
